# jumbory-item-manager

./: .gitignore  README.md  docker-compose.yml  test_scouts.csv
.github/workflows/: deploy-lambda.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 1f3a2b7c9e4d_add_item_quantity_jamboree_flag.py  8b2a6f4c1a9e_add_soft_delete_to_leaders_scouts.py  b7a1c2d3e4f5_add_categories_master_table.py  cd65016c92fc_initial_migration.py  e1a8d5c4b2f7_add_item_image_url.py
backend/app/: database.py  models.py  schemas.py
docs/: aws_lambda_oidc_deploy_log.md  data_flow.md  deployment_guide.md  frontend_backend_files.md  implementation_log.md  overview.md  table_schema.md  updates_2026-02-14.md  updates_2026-02-16.md  updates_2026-02-28.md  usage_guide.md
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/admin/items/: page.tsx
frontend/src/app/admin/leaders/: page.tsx
frontend/src/app/admin/scouts/: page.tsx
frontend/src/app/leaders/: page.tsx
frontend/src/app/scouts/: page.tsx
frontend/src/app/usage/: page.tsx
frontend/src/components/: admin-gate.tsx
frontend/src/lib/: admin-auth.ts
frontend/src/types/: item.ts  leader.ts  scout.ts
lambda/: README.md  handler.py  requirements.txt
