[tool.poetry]
name = "jumbory-backend"
version = "0.1.0"
description = "Jumbory item manager backend"
authors = ["Jumbory Team <dev@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.115.6"
uvicorn = { version = "^0.34.0", extras = ["standard"] }
sqlalchemy = "^2.0.36"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
