[tool.poetry]
name = "jumbory-backend"
version = "0.1.0"
description = "Jumbory item manager backend"
authors = ["Jumbory Team <dev@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.115.6"
uvicorn = { version = "^0.34.0", extras = ["standard"] }
sqlalchemy = "^2.0.36"
pydantic = "^2.0.0"
python-multipart = "^0.0.20"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.0"
mangum = "^0.19.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
